Refactor DynamicAgent to utilize unified error handling for tool state retrieval. Update PlanTemplateController to handle planTemplateId replacements from backend responses and improve logging. Clean up unused imports in various classes and enhance error handling in ARIA snapshot generation to ensure smoother execution flow.